1999-09-09  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* lib/symbol.c:
	    Use CRC-31 polynome hash function internally.

	* transports/mailbox/mailbox.c, transports/mailbox/mboxpath.c,
	  man/mailbox.8, man/mboxpath.1:
	    Added -X[X] option to behave alike -P[P] option, but to use
	    CRC32() function.

	* lib/symbol.c, lib/crc32.c, lib/hashtest.c:
	    Separated CRC-31 (?) polynome calculator into separate module
	    outside the  symbol.c;  Entrypoints: 'long crc32(char *s);' and
	    'long crc32n(char *s, int len);'.

1999-09-08  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* libsh/interpret.c, libsh/expand.c, include/libsh.c,
	  libsh/shconfig.h, libsh/zmsh.c:
	    Hunted around, and fixed with a KLUDGE a problem in $(elements ..)
	    expansion routine.  I am not *quite* sure it is right one for
	    all cases, but detected problems at online "smtp-router" are
	    cured with this.

	* proto/cf/server.cf, proto/cf/aliases.cf, README.UPGRADING,
	  SiteConfig.in:
	    - Fix previously scrambled  server.cf  somewhat
	    - Created global settings controlling two parts of the
	      $(routeuser ..) functionality.

	* smtpserver/smtprouter.c:
	    Cleaned previous hacks.

	* smtpserver/smtpserver.c, smtpserver/smtprouter.c, proto/cf/server.cf:
	    Noticed several problems:
	    - Router reports were not reported thru the proper socket, and
	      that screw up things..
	    - Made some wrappers into the  server.cf  to always issue proper
	      status code in the line; plus always terminating "250 EXPN done",
	      or "250 VRFY done" lines.  Also noticed a bug in the zmsh!
	    - smtpserver main loop got spurious EOF result from protocol input
	      line, when the input was in fact just plain CRLF ... Urgle..

	* smtpserver/zpwmatch.c:
	    More rework at the SHADOW -branch..

1999-09-07  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* smtpserver/smtpserver.c:
	    If (heaven forbid)  s_gets()  routine notes that the input